commit update with all requirements met

--- a/templates/add_pet_form.html
+++ b/templates/add_pet_form.html
@@ -12,7 +12,15 @@
         <tr>
             <td><p class="label">{{field.label}}</p></td>
             <td>{{field}}</td>
+            <td>
+                <b class="error">
+                    {% for e in field.errors %}
+                      {{e}}
+                    {% endfor %}
+                </b>
+            </td>
         </tr>
+
         {% endfor %}
     </table>
 
